# recommender-item-based-cf-tg-bot

./: .env.example  Dockerfile  pyproject.toml
src/: main.py
src/application/interfaces/: user_repository.py
src/application/services/movies/: get_all.py  get_by_id.py
src/application/services/occupation/: get_all.py
src/application/services/user/: check_registration.py  get.py  grant_trial.py  register.py  update.py
src/config/: config.py  settings.py
src/domain/: exceptions.py
src/domain/entities/: genre.py  movie.py  occupation.py  user.py
src/infrastructure/: exceptions.py
src/infrastructure/repositories/: movie_repository.py  occupation_repository.py  rating_repository.py  user_repository.py
src/presentation/dependencies/: movies.py  occupation.py  user.py
src/presentation/keyboards/: gender.py  menu.py  occupations.py  pagination.py
src/presentation/routers/: menu.py  movie_card.py  movies_list.py  ratings.py  recommendations.py  starting.py
src/presentation/text/: error.py  info.py  message.py  variables.py
src/presentation/utils/: markup.py
src/utils/: get_movie_pagination.py
